[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sahiixx-bus"
version = "0.1.0"
description = "Unified orchestration bus connecting the SAHIIXX ecosystem"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
all = [
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
sahiixx-bus = "sahiixx_bus.cli:main"
